--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-secondary text-white">
+<div class="container-fluid"><div class="card bg-secondary text-white">
   <div class="card-body">
     <h4 class="card-title">{{product.title}}</h4>
     <h5 class="card-text">{{product.price|currency:'USD'}}</h5>
