--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
     
 <div class="jumbotron jumbotron-fluid">
-  <div class="container">
+  <div class="container-fluid shadow-lg">
   
     <p class="lead">THE ONLINE MEGASTORE</p>
     <hr class="my-2">
